[options.packages.find]
where = stats

[options.entry_points]
console_scripts=  
    fitting-object=stats:main 

[tool:pytest]
testpaths=tests
markers =
    compare: mark a test as a comapre benchmark runs on data. 
addopts = -W ignore

[coverage:run]
branch=True
source=stats

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
known_firstparty = (stats)
blocked_extensions = pex,npy,jpg,ipynd,png,pdf